--- a/Day 2 HTML/index.html
+++ b/Day 2 HTML/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>BlueDevpDirectory</title>
-    <link rel="stylesheet" href="Day2.css" />
+    <link rel="stylesheet" href="index.css" >
   </head>
   <body>
     <div id="container">
@@ -18,13 +18,13 @@
             <a href="index.html">Home</a>
           </li>
           <li class="menu-item">
-            <a href="index.html">About Us</a>
+            <a href="about.html">About Us</a>
           </li>
           <li class="menu-item">
-            <a href="index.html">Browse Developers</a>
+            <a href="">Browse Developers</a>
           </li>
           <li class="menu-item">
-            <a href="index.html">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
           </li>
         </ul>
       </div>
