--- a/Capstone  Project/index.html
+++ b/Capstone  Project/index.html
@@ -178,6 +178,77 @@
           </div>
         </div>
       </section>
+      <!-- Video Section starts -->
+      <div class="video-row">
+        <div class="video-item">
+          <figure>
+            <video controls>
+              <source src="./Asset/video1.mp4" type="video/mp4" />
+              <source src="video1.webm" type="video/webm" />
+
+              Your browser does not support the video tag.
+            </video>
+            <figcaption>
+              What Happens To Your Brain And Body When You Go Vegan
+            </figcaption>
+          </figure>
+        </div>
+        <div class="video-item">
+          <figure>
+            <video controls>
+              <source src="./Asset/viddeo2.mp4" type="video/mp4" />
+              <source src="video2.webm" type="video/webm" />
+              Your browser does not support the video tag.
+            </video>
+            <figcaption>How a vegan diet affects your brain</figcaption>
+          </figure>
+        </div>
+        <div class="video-item">
+          <figure>
+            <video controls>
+              <source src="./Asset/video3.mp4" type="video/mp4" />
+              <source src="video3.webm" type="video/webm" />
+              Your browser does not support the video tag.
+            </video>
+            <figcaption>Is Veganism Healthy or Harmful?</figcaption>
+          </figure>
+        </div>
+      </div>
+
+      <!-- Section ends -->
+      <div class="container">
+        <div class="flower-info">
+          <h2>About Vegan</h2>
+          <p>
+            Well-planned vegan diets follow healthy eating guidelines, and
+            contain all the nutrients that our bodies need. Both the British
+            Dietetic Association and the American Academy of Nutrition and
+            Dietetics recognise that they are suitable for every age and stage
+            of life. Some research has linked that there are certain health
+            benefits to vegan diets with lower blood pressure and cholesterol,
+            and lower rates of heart disease, type 2 diabetes and some types of
+            cancer.
+          </p>
+        </div>
+        <div class="contact-form">
+          <h2>Contact Us</h2>
+          <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required />
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
+
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" required />
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" required></textarea>
+
+            <button type="submit">Send Message</button>
+          </form>
+        </div>
+      </div>
     </header>
   </body>
 </html>
