--- a/Capstone  Project/index.html
+++ b/Capstone  Project/index.html
@@ -248,7 +248,37 @@
             <button type="submit">Send Message</button>
           </form>
         </div>
+        
       </div>
+      <footer>
+        <div class="footer">
+          <div class="footer-content">
+            <div class="footer-section">
+              <h3>About Us</h3>
+              <p>We are a vegan company committed to promoting a healthy and sustainable lifestyle.</p>
+            </div>
+            <div class="footer-section">
+              <h3>Our Products</h3>
+              <ul>
+                <li>Plant-based meats</li>
+                <li>Dairy-free cheeses</li>
+                <li>Organic fruits and vegetables</li>
+              </ul>
+            </div>
+            <div class="footer-section">
+              <h3>Contact Us</h3>
+              <ul>
+                <li>123 Main Street</li>
+                <li>New York, NY 10001</li>
+                <li>Phone: (123) 456-7890</li>
+                <li>Email: info@myvegancompany.com</li>
+              </ul>
+            </div>
+          </div>
+          <p>&copy; 2023 My Vegan Company. All rights reserved.</p>
+        </div>
+      </footer>
+      
     </header>
   </body>
 </html>
