--- a/Capstone  Project/index.html
+++ b/Capstone  Project/index.html
@@ -248,14 +248,16 @@
             <button type="submit">Send Message</button>
           </form>
         </div>
-        
       </div>
       <footer>
         <div class="footer">
           <div class="footer-content">
             <div class="footer-section">
               <h3>About Us</h3>
-              <p>We are a vegan company committed to promoting a healthy and sustainable lifestyle.</p>
+              <p>
+                We are a vegan company committed to promoting a healthy and
+                sustainable lifestyle.
+              </p>
             </div>
             <div class="footer-section">
               <h3>Our Products</h3>
@@ -278,7 +280,6 @@
           <p>&copy; 2023 My Vegan Company. All rights reserved.</p>
         </div>
       </footer>
-      
     </header>
   </body>
 </html>
