--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -85,7 +85,31 @@
             <img class="backdrop-img" src="imgs/backdrop2.png" alt="backdrop">
         </div>
     </div>
-
+    <div class="container">
+        <div class="left">
+          <h2>What is Blockchain?</h2>
+          <p>Blockchain is a digital ledger of transactions that is distributed across a network of computers. Each block in the chain contains a record of several transactions, and once a block is added to the chain, it cannot be altered. This makes the blockchain an immutable and transparent record of transactions that can be used for a variety of applications, such as secure and efficient payments, supply chain management, and identity verification.</p>
+        </div>
+        <div class="right">
+          <form>
+            <h2>Contact Us</h2>
+            <div class="input-group">
+              <input type="text" id="name" required>
+              <label for="name">Name</label>
+            </div>
+            <div class="input-group">
+              <input type="email" id="email" required>
+              <label for="email">Email</label>
+            </div>
+            <div class="input-group">
+              <textarea id="message" required></textarea>
+              <label for="message">Message</label>
+            </div>
+            <button type="submit">Send</button>
+          </form>
+        </div>
+      </div>
+      
     <footer>
         <div class="footer-column first">
             <h2>Think Blocks</h2>
